--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,10 +107,6 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
 
   },
-  "exclude": [
-    "node_modules/*"
-  ],
-  "include": [
-    "./src/"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules"]
 }
