--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
+    "start": "node dist/index.js --default-type=commonjs",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
