--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "type": "module",
   "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js --default-type=commonjs",
+    "start": "node dist/index.js --default-type=module",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
