--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/index.js --default-type=module",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts --default-type=module"
   },
   "keywords": [],
   "author": "",
