--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build": "npx tsc",
-    "start": "node dist/index.js --default-type=module",
-    "dev": "nodemon src/index.ts --default-type=module"
+    "build": "npm install && npx tsc",
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
